--- a/css/style.css
+++ b/css/style.css
@@ -8151,9 +8151,9 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #d9bf77; }
+  color: #a91622; }
   a:hover, a:active, a:focus {
-    color: #d9bf77;
+    color: #a91622;
     outline: none !important;
     text-decoration: none !important; }
 
@@ -8164,7 +8164,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #d9bf77 !important; }
+  color: #a91622 !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8184,9 +8184,9 @@ h1, h2, h3, h4, h5,
     position: relative !important;
     top: 0; }
   .ftco-navbar-light .navbar-brand {
-    color: #d9bf77; }
+    color: #a91622; }
     .ftco-navbar-light .navbar-brand span {
-      color: #d9bf77;
+      color: #a91622;
       font-size: 28px; }
     .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
       color: #000; }
@@ -8257,12 +8257,12 @@ h1, h2, h3, h4, h5,
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #d9bf77; } }
+        background: #a91622; } }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #d9bf77; }
+    color: #a91622; }
     .ftco-navbar-light .navbar-nav > .nav-item.active > a:after {
       opacity: 1;
-      background: #d9bf77; }
+      background: #a91622; }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8283,16 +8283,16 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #d9bf77 !important; }
+      color: #a91622 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #d9bf77;
+      background: #a91622;
       border: none !important; }
       .ftco-navbar-light.scrolled .nav-item.cta > a span {
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #d9bf77; }
+      border-color: #a91622; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8318,7 +8318,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #d9bf77 !important; }
+        color: #a91622 !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8354,7 +8354,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #d9bf77 !important;
+      color: #a91622 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8411,7 +8411,7 @@ h1, h2, h3, h4, h5,
       .hero-wrap .slider-text .icon span {
         font-size: 80px;
         line-height: 1.2;
-        color: #d9bf77; }
+        color: #a91622; }
       .hero-wrap .slider-text .icon:after {
         position: absolute;
         left: 0;
@@ -8420,7 +8420,7 @@ h1, h2, h3, h4, h5,
         content: '';
         max-width: 500px;
         height: 2px;
-        background: #d9bf77;
+        background: #a91622;
         margin: 0 auto; }
     .hero-wrap .slider-text .breadcrumbs {
       text-transform: uppercase;
@@ -8491,7 +8491,7 @@ h1, h2, h3, h4, h5,
   padding-bottom: 0 !important; }
 
 .bg-primary {
-  background: #d9bf77; }
+  background: #a91622; }
 
 .container {
   max-width: 1240px; }
@@ -8511,20 +8511,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #d9bf77 !important;
-    border: 1px solid #d9bf77 !important;
+    background: #a91622 !important;
+    border: 1px solid #a91622 !important;
     color: #fff; }
     .btn.btn-primary:hover {
-      border: 1px solid #d9bf77;
+      border: 1px solid #a91622;
       background: transparent !important;
-      color: #d9bf77; }
+      color: #a91622; }
   .btn.btn-outline-primary {
-    border: 1px solid #d9bf77;
+    border: 1px solid #a91622;
     background: transparent;
-    color: #d9bf77; }
+    color: #a91622; }
     .btn.btn-outline-primary:hover {
       border: 1px solid transparent;
-      background: #d9bf77;
+      background: #a91622;
       color: #fff; }
   .btn.btn-white {
     background: #fff;
@@ -8536,8 +8536,8 @@ h1, h2, h3, h4, h5,
     .btn.btn-white span {
       color: #000; }
     .btn.btn-white:hover {
-      border: 1px solid #d9bf77;
-      background: #d9bf77;
+      border: 1px solid #a91622;
+      background: #a91622;
       color: #fff; }
       .btn.btn-white:hover span {
         color: #fff; }
@@ -8547,8 +8547,8 @@ h1, h2, h3, h4, h5,
       border-width: 1px;
       color: #fff; }
       .btn.btn-white.btn-outline-white:hover, .btn.btn-white.btn-outline-white:focus, .btn.btn-white.btn-outline-white:active {
-        background: #d9bf77;
-        border-color: #d9bf77;
+        background: #a91622;
+        border-color: #a91622;
         color: #000; }
   .btn.btn-outline-black {
     border-color: black;
@@ -8574,7 +8574,7 @@ h1, h2, h3, h4, h5,
     margin-bottom: 15px;
     font-weight: 300; }
     .do-list li span {
-      color: #d9bf77;
+      color: #a91622;
       font-size: 22px; }
 
 .offer-deal {
@@ -8617,7 +8617,7 @@ h1, h2, h3, h4, h5,
     -webkit-transition: all 0.6s ease;
     -ms-transition: all 0.6s ease;
     transition: all 0.6s ease;
-    background: #d9bf77;
+    background: #a91622;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -8634,8 +8634,8 @@ h1, h2, h3, h4, h5,
   .services .icon {
     width: 120px;
     height: 120px;
-    border: 1px solid #d9bf77;
-    background: #d9bf77;
+    border: 1px solid #a91622;
+    background: #a91622;
     margin: 0 auto;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -8657,7 +8657,7 @@ h1, h2, h3, h4, h5,
 .treatment .icon span {
   font-size: 60px;
   line-height: 1;
-  color: #d9bf77; }
+  color: #a91622; }
 
 .treatment h3 {
   font-size: 20px; }
@@ -8764,7 +8764,7 @@ h1, h2, h3, h4, h5,
         display: block;
         width: 40px;
         height: 40px;
-        background: #d9bf77;
+        background: #a91622;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
         -ms-border-radius: 50%;
@@ -8835,7 +8835,7 @@ h1, h2, h3, h4, h5,
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #d9bf77; }
+        background: #a91622; }
 
 .testimony-wrap {
   display: block;
@@ -8866,7 +8866,7 @@ h1, h2, h3, h4, h5,
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    background: #d9bf77;
+    background: #a91622;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -8885,7 +8885,7 @@ h1, h2, h3, h4, h5,
   -ms-border-radius: 50%;
   border-radius: 50%; }
   .ftco-social a span {
-    color: #d9bf77; }
+    color: #a91622; }
 
 .form-control {
   height: 58px !important;
@@ -8900,7 +8900,7 @@ h1, h2, h3, h4, h5,
   padding-right: 0;
   padding-left: 0; }
   .form-control:focus, .form-control:active {
-    border-color: #d9bf77; }
+    border-color: #a91622; }
 
 textarea.form-control {
   height: inherit !important; }
@@ -8910,7 +8910,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #d9bf77 !important; }
+  background: #a91622 !important; }
 
 .ftco-section {
   padding: 7em 0;
@@ -8964,10 +8964,10 @@ textarea.form-control {
     height: 40px;
     width: 40px;
     display: block;
-    background: #d9bf77;
+    background: #a91622;
     border-radius: 50%;
     position: relative;
-    color: #d9bf77 !important; }
+    color: #a91622 !important; }
     .ftco-footer-social li a span {
       position: absolute;
       font-size: 20px;
@@ -9016,7 +9016,7 @@ textarea.form-control {
     font-size: 12px;
     display: block;
     margin-bottom: 5px;
-    color: #d9bf77;
+    color: #a91622;
     line-height: 1;
     z-index: 1;
     font-weight: 600;
@@ -9076,7 +9076,7 @@ textarea.form-control {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #d9bf77;
+    background: #a91622;
     opacity: 0; }
 
 .ftco-counter {
@@ -9098,7 +9098,7 @@ textarea.form-control {
       right: 0;
       bottom: 0;
       content: '';
-      bordeR: 1px solid #d9bf77;
+      bordeR: 1px solid #a91622;
       z-index: -1;
       -moz-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
@@ -9113,15 +9113,15 @@ textarea.form-control {
       -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
-      color: #d9bf77; }
+      color: #a91622; }
   .ftco-counter .text strong.number {
     font-weight: 500;
     font-size: 50px;
-    color: #d9bf77; }
+    color: #a91622; }
   .ftco-counter .text span {
     font-weight: 600;
     font-size: 14px;
-    color: #d9bf77;
+    color: #a91622;
     text-transform: uppercase;
     letter-spacing: 3px; }
   .ftco-counter .text:hover .icon span, .ftco-counter .text:focus .icon span {
@@ -9130,7 +9130,7 @@ textarea.form-control {
     -webkit-transform: rotate(135deg);
     -ms-transform: rotate(135deg);
     transform: rotate(135deg);
-    background: #d9bf77; }
+    background: #a91622; }
   @media (max-width: 991.98px) {
     .ftco-counter .counter-wrap {
       margin-bottom: 40px !important; } }
@@ -9172,7 +9172,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #d9bf77; }
+          color: #a91622; }
   .blog-entry .meta > div {
     display: inline-block;
     margin-right: 5px;
@@ -9190,7 +9190,7 @@ textarea.form-control {
   .blog-entry span.day {
     font-size: 58px;
     font-weight: 300;
-    color: #d9bf77;
+    color: #a91622;
     line-height: 1; }
   .blog-entry span.yr, .blog-entry span.mos {
     display: block;
@@ -9242,11 +9242,11 @@ textarea.form-control {
     .block-7 .price sup {
       font-size: 24px;
       top: -1em;
-      color: #d9bf77; }
+      color: #a91622; }
     .block-7 .price .number {
       font-size: 60px;
       font-weight: 500;
-      color: #d9bf77; }
+      color: #a91622; }
   .block-7 .excerpt {
     margin-bottom: 20px;
     color: #999999; }
@@ -9273,7 +9273,7 @@ textarea.form-control {
     width: 60%;
     margin: 0 auto; }
     .block-7 .btn-primary:hover, .block-7 .btn-primary:focus {
-      background: #d9bf77 !important;
+      background: #a91622 !important;
       color: #fff; }
   .block-7:hover, .block-7:focus {
     -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
@@ -9297,7 +9297,7 @@ textarea.form-control {
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      color: #d9bf77;
+      color: #a91622;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -9306,7 +9306,7 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #d9bf77;
+      background: #a91622;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9341,7 +9341,7 @@ textarea.form-control {
     /* Firefox 18- */
     color: rgba(0, 0, 0, 0.9); }
   .contact-form .form-control:focus, .contact-form .form-control:active {
-    border-color: #d9bf77 !important; }
+    border-color: #a91622 !important; }
 
 .contact-form textarea.form-control {
   height: inherit !important; }
@@ -9364,7 +9364,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #d9bf77; }
+        color: #a91622; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -9398,7 +9398,7 @@ textarea.form-control {
     margin: 0;
     border-radius: 50% !important;
     font-size: 16px;
-    background: #d9bf77;
+    background: #a91622;
     color: #fff; }
     .custom-pagination li.active a:hover, .custom-pagination li.active a:focus, .custom-pagination .prev.active a:hover, .custom-pagination .prev.active a:focus, .custom-pagination .next.active a:hover, .custom-pagination .next.active a:focus {
       color: #fff; }
